# mbr-partition-forensic

./: .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml  mkdocs.yml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
core/: Cargo.toml  README.md
core/src/: lib.rs  vfs.rs
docs/: PRD.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-reader-analyzer-workspace-split.md  0002-pure-library-no-shipped-binary.md  0003-forensicnomicon-knowledge-leaf.md  0004-forensic-vfs-volumesystem-adapter.md  0005-normalize-onto-forensicnomicon-report.md  0006-panic-free-forbid-unsafe-fuzzed.md  0007-gpt-cross-check-via-sibling-crate.md  0008-msrv-floor-below-dev-toolchain-pin.md
forensic/: Cargo.toml  README.md
forensic/src/: analyse.rs  findings.rs  wipe.rs
forensic/tests/: boot_unknown_evidence_tests.rs  canonical_finding_tests.rs  carve_tests.rs  fs_fingerprint_tests.rs  io_robustness_tests.rs  mbr_tests.rs  provenance_tests.rs  real_mbr_oracle.rs  vbr_tests.rs  wipe_tests.rs
src/: analyse.rs  boot_code.rs  bootkit.rs  carve.rs  diag.rs  disk_signature.rs  ebr.rs  entropy.rs  findings.rs  gap.rs  gpt.rs  lib.rs  mbr.rs  partition.rs  provenance.rs  signature.rs  vbr.rs  wipe.rs
supply-chain/: config.toml
tests/: boot_context_tests.rs  boot_entropy_tests.rs  chs_lba_tests.rs  fs_fingerprint_tests.rs  gpt_integration_tests.rs  mbr_tests.rs  sector_size_tests.rs  tier_a_table_tests.rs
tests/data/: README.md  dftt_mmls_1_mbr.dd
