[workspace]
resolver = "2"
members = ["core", "forensic"]

# Single source of truth for fields shared by every member (DRY): bump version /
# MSRV / license here once; members inherit via `field.workspace = true`.
[workspace.package]
version = "0.6.1"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/mbr-partition-forensic"
homepage = "https://github.com/SecurityRonin/mbr-partition-forensic"

# Single source of truth for dependency versions (DRY): declare each once;
# members write `dep.workspace = true`. The inter-crate `mbr` version lives here
# too, so a bump touches one line instead of every member + dev-dep.
[workspace.dependencies]
mbr = { path = "core", version = "0.6.1", package = "mbr-partition-core" }
gpt-partition-forensic = "0.6"
forensicnomicon = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
serde_json = "1"
tempfile = "3"
tracing-subscriber = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
unwrap_used = { level = "deny", priority = 0 }
expect_used = { level = "deny", priority = 0 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
# Same stylistic family as the cast_* allows above: width-widening casts on
# disk-geometry arithmetic read more clearly as `x as u64` than `u64::from(x)`.
cast_lossless = { level = "allow", priority = 1 }
# Hex/byte signature tables and disk-offset literals are deliberately written
# without digit separators to mirror the on-disk layout.
unreadable_literal = { level = "allow", priority = 1 }
# The partition-family/filesystem compatibility matrix and the anomaly builder
# are intentionally long, flat, and exhaustive — splitting them hurts clarity.
too_many_lines = { level = "allow", priority = 1 }
unnested_or_patterns = { level = "allow", priority = 1 }

# TEMPORARY: forensicnomicon's volume-analysis (volume_encryption/volume_serial) ships in 1.6;
# use the branch until it publishes, then drop this patch and bump the dep to "1.6".
[patch.crates-io]
forensicnomicon = { git = "https://github.com/SecurityRonin/forensicnomicon", branch = "volume-analysis-1.6" }
