[package]
name = "mbr-partition-forensic"
version = "0.5.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Forensic MBR analyzer — structural anomaly detection, gap analysis, slack-space carving, wipe and bootkit detection, and filesystem fingerprinting as graded forensicnomicon report::Finding, built on mbr-partition-core"
repository = "https://github.com/SecurityRonin/mbr-partition-forensic"
homepage = "https://github.com/SecurityRonin/mbr-partition-forensic"
documentation = "https://docs.rs/mbr-partition-forensic"
keywords = ["forensics", "mbr", "partition", "disk-image", "dfir"]
categories = ["parser-implementations", "filesystem"]
exclude = ["fuzz/", ".github/", ".pre-commit-config.yaml", "deny.toml", "renovate.json"]

[features]
default = ["gpt"]
gpt = ["dep:gpt-partition-forensic"]
trace = ["dep:tracing", "mbr/trace"]
serde = ["dep:serde", "mbr/serde", "forensicnomicon/serde", "gpt-partition-forensic?/serde"]

[dependencies]
mbr = { version = "0.5.0", path = "../core", package = "mbr-partition-core" }
forensicnomicon = "0.5"
gpt-partition-forensic = { version = "0.5.0", optional = true }
tracing = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[lints]
workspace = true
