[package]
name = "mbr-partition-forensic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Forensic MBR analyzer — structural anomaly detection, gap analysis, slack-space carving, wipe and bootkit detection, and filesystem fingerprinting as graded forensicnomicon report::Finding, built on mbr-partition-core"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mbr-partition-forensic"
keywords = ["forensics", "mbr", "partition", "disk-image", "dfir"]
categories = ["parser-implementations", "filesystem"]
exclude = ["fuzz/", ".github/", ".pre-commit-config.yaml", "deny.toml", "renovate.json", "tests/"]

[features]
default = ["gpt"]
gpt = ["dep:gpt-partition-forensic"]
trace = ["dep:tracing", "mbr/trace"]
serde = ["dep:serde", "mbr/serde", "forensicnomicon/serde", "gpt-partition-forensic?/serde"]

[dependencies]
mbr = { workspace = true }
forensicnomicon.workspace = true
gpt-partition-forensic = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
